Fix footer spacing

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -87,6 +87,7 @@ section > div {
 }
 
 footer {
+    padding-top: 1em;
     text-align: center;
 }
 
